basic-auth-per-route/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
  - name: 0.0.0.0_8080
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              format: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %UPSTREAM_HOST% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" - %RESPONSE_CODE% - %RESPONSE_FLAGS% \n"
          http_filters:
          - name: envoy.filters.http.basic_auth
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuth
              users:
                inline_string: |-
                  user:{SHA}qUqP5cyxm6YcTAhz05Hph5gvu9M=
                  admin:{SHA}0DPiKuNIrrVmD8IUCuw1hQxNqZc=
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: httpbin.8000
            virtual_hosts:
            - name: httpbin
              domains:
              - "*"
              routes:
              - match: { prefix: "/headers" }
                route: { cluster: httpbin-8000 }
                typed_per_filter_config:
                  envoy.filters.http.basic_auth:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
              - match: { prefix: "/ip" }
                route: { cluster: httpbin-8000 }
                typed_per_filter_config:
                  envoy.filters.http.basic_auth:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuthPerRoute
                    users:
                      inline_string: |-
                        admin:{SHA}0DPiKuNIrrVmD8IUCuw1hQxNqZc=
              - match: { prefix: "/" }
                route: { cluster: httpbin-8000 }
          stat_prefix: httpbin-8000
  clusters:
  - name: httpbin-8000
    connect_timeout: 0.25s
    type: STRICT_DNS
    load_assignment:
      cluster_name: httpbin-8000
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8000
